# medgemma-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-02-15-medgemma-streamlit-app-design.md  2026-02-15-medgemma-streamlit-app.md
docs/superpowers/plans/: 2026-04-06-remove-sidebar.md
docs/superpowers/specs/: 2026-04-06-remove-sidebar-design.md
tests/: test_streamlit_app.py
