[project]
name = "medgemma-app"
version = "0.1.0"
description = "Medical image and text inference using MedGemma 1.5 4B"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate",
    "pillow",
    "python-dotenv",
    "streamlit",
    "torch",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
